--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Ristorante</string>
+    <string name="bienvenido">BIENVENIDO</string>
+    <string name="nombre">Nombre</string>
+    <string name="crear">Crear</string>
+    <string name="modificar">Modificar</string>
+    <string name="eliminar">Eliminar</string>
+    <string name="ingredientes">Ingredientes</string>
+    <string name="consto">Consto</string>
+    <string name="pvp">PVP</string>
+    <string name="ingrediente">Ingredientes</string>
 </resources>
